tests/e2e/multiline_comments6.error
Error: syntax error in story at line 2, column 1

2|    /* b = 0
      ^^^^^^^^

E0162: Multiline comment must end with a newline.
